--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">PracticeProject</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="welcome_text">Welcome!</string>
+    <string name="button_text">Your position</string>
+    <string name="title_activity_maps">MapsActivity</string>
 </resources>
