--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,7 @@
     <string name="app_name">PracticeProject</string>
     <string name="welcome_text">Welcome!</string>
     <string name="button_text">Your position</string>
+    <string name="bottom_sheet_peek">Your position</string>
+    <string name="bottom_sheet_content">Your position</string>
     <string name="title_activity_maps">MapsActivity</string>
 </resources>
