--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,11 @@
     <string name="bottom_sheet_peek">Your position</string>
     <string name="bottom_sheet_content">Your position</string>
     <string name="title_activity_maps">MapsActivity</string>
+    <string name="action1">Action 1</string>
+    <string name="action2">Action 2</string>
+    <string name="action3">Action 3</string>
+    <string name="stations">Stations</string>
+    <string name="map">Map</string>
+    <string name="settings">Settings</string>
+    <string name="stationsList">List of metro stations</string>
 </resources>
