--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,10 @@
     <string name="action2">Action 2</string>
     <string name="action3">Action 3</string>
     <string name="stations">Stations</string>
+    <string name="places">Places</string>
     <string name="map">Map</string>
     <string name="settings">Settings</string>
     <string name="stationsList">List of metro stations</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
