--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,9 +12,6 @@
     <string name="places">Places</string>
     <string name="map">Map</string>
     <string name="settings">Settings</string>
-    <string name="stationsList">List of metro stations</string>
-    <string name="sightsList">List of sights</string>
+    <string name="placesList">List of places</string>
     <string name="sight">Sight</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
